--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 click==8.0.1
+colorama==0.4.4
 Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
@@ -6,6 +7,11 @@ importlib-metadata==4.8.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+numpy==1.21.2
+pandas==1.3.3
+python-dateutil==2.8.2
+pytz==2021.1
+six==1.16.0
 SQLAlchemy==1.4.24
 typing-extensions==3.10.0.2
 Werkzeug==2.0.1
