--- a/langflow/requirements.txt
+++ b/langflow/requirements.txt
@@ -1,7 +1,6 @@
-numpy==1.21.2
-pandas==1.3.3
 click==8.0.1
 colorama==0.4.4
+fasttext==0.9.2
 Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
@@ -10,8 +9,13 @@ importlib-metadata==4.8.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+numpy==1.21.2
+pandas==1.3.3
+pkg_resources==0.0.0
+pybind11==2.7.1
 python-dateutil==2.8.2
 pytz==2021.1
+scipy==1.7.1
 six==1.16.0
 SQLAlchemy==1.4.24
 typing-extensions==3.10.0.2
