--- a/langflow/requirements.txt
+++ b/langflow/requirements.txt
@@ -20,3 +20,7 @@ SQLAlchemy==1.4.24
 typing-extensions==3.10.0.2
 Werkzeug==2.0.1
 zipp==3.5.0
+
+# project testing requirements
+pytest==6.2.5
+pytest-flask==1.2.0
