--- a/langflow/requirements.txt
+++ b/langflow/requirements.txt
@@ -2,6 +2,7 @@ click==8.0.1
 colorama==0.4.4
 fasttext==0.9.2
 Flask==2.0.1
+flask-cors==3.0.10
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
 gunicorn==20.1.0
