42 split on services (#44)
* change proc file

* rename langflow to backend folder

* split services

* delete mkdir before WORKDIR

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.7-slim
+FROM python:3.7-buster
 
 RUN pip install --upgrade pip
 
-RUN mkdir /app
-COPY . /app
-WORKDIR /app
+WORKDIR /backend
+
+COPY requirements.txt .
 
 RUN pip install -r requirements.txt
