--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,27 +1,39 @@
+attrs==21.2.0
+backports.entry-points-selectable==1.1.0
 click==8.0.1
 colorama==0.4.4
+distlib==0.3.3
 fasttext==0.9.2
+filelock==3.3.0
 Flask==2.0.1
-flask-cors==3.0.10
+Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
 gunicorn==20.1.0
 importlib-metadata==4.8.1
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 numpy==1.21.2
+packaging==21.0
 pandas==1.3.3
+platformdirs==2.4.0
+pluggy==1.0.0
+py==1.10.0
 pybind11==2.7.1
+pyparsing==2.4.7
 python-dateutil==2.8.2
 pytz==2021.1
 scipy==1.7.1
 six==1.16.0
 SQLAlchemy==1.4.24
+toml==0.10.2
+tox==3.24.4
 typing-extensions==3.10.0.2
+virtualenv==20.8.1
 Werkzeug==2.0.1
 zipp==3.5.0
 
-# project testing requirements
 pytest==6.2.5
 pytest-flask==1.2.0
