--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,6 +34,7 @@ typing-extensions==3.10.0.2
 virtualenv==20.8.1
 Werkzeug==2.0.1
 zipp==3.5.0
+psycopg2==2.7.7
 
 pytest==6.2.5
 pytest-flask==1.2.0
