63 fix flasgger docs (#65)
* added api for authorization

* fix flasgger api

--- a/backend/api/swaggers/answer_api.yml
+++ b/backend/api/swaggers/answer_api.yml
@@ -9,24 +9,14 @@ produces:
 - "application/json"
 parameters:
   - in: header
-    name: headers_params
+    name: session_token
     required: true
-    schema:
-      id: question_api_header
-      required:
-        - session_token
-      properties:
-        session_token:
-          type: string
-          description: user's session token
+    description: user's session token
   - in: body
     name: body_params
     required: true
     schema:
-      id: question_api_body
-      required:
-        - question_token
-        - user_answer
+      id: answer_api_body
       properties:
         question_token:
           type: string
@@ -39,6 +29,7 @@ responses:
   500:
       description: The error on the server side
       schema:
+        id: answer_api_500
         properties:
           status:
             type: integer
@@ -52,6 +43,7 @@ responses:
   200:
       description: Access token for user intercation
       schema:
+        id: answer_api_200
         properties:
           question:
             type: string
