--- a/backend/api/swaggers/authorization_api.yml
+++ b/backend/api/swaggers/authorization_api.yml
@@ -4,20 +4,13 @@ to the backend and create user in base if username and email wasnt
 registered before.
 ---
 description: Client side interaction with server
-consumes:
-- "application/json"
-produces:
-- "application/json"
+
 parameters:
-  - name: body
-    in: body
+  - in: body
+    name: body
     required: true
     schema:
-      id: login_api_body
-      required:
-        - username
-        - password
-        - email
+      id: authorization_api_body
       properties:
         username:
           type: string
@@ -28,12 +21,12 @@ parameters:
         email:
           type: string
           description: The user's email (po4Ta)
-
-
+          
 responses:
   500:
       description: The error on the server side
       schema:
+        id: authorization_api_500
         properties:
           status:
             type: integer
@@ -47,6 +40,7 @@ responses:
   200:
       description: Access token for user intercation
       schema:
+        id: authorization_api_200
         properties:
           status:
             type: string
