--- a/backend/api/swaggers/upload_phrases.yml
+++ b/backend/api/swaggers/upload_phrases.yml
@@ -9,24 +9,14 @@ produces:
 - string
 parameters:
   - in: header
-    name: headers_params
+    name: session_token
     required: true
-    schema:
-      id: question_api_header
-      required:
-        - session_token
-      properties:
-        session_token:
-          type: string
-          description: user's session token
-
+    description: user's session token
   - in: body
     name: body_params
     required: true
     schema:
       id: upload_phrases_api_body
-      required:
-        - file
       properties:
         file:
           type: string
@@ -36,6 +26,7 @@ responses:
   500:
       description: The error on the server side
       schema:
+        id: upload_phrases_api_500
         properties:
           status:
             type: integer
