--- a/backend/api/swaggers/results_api.yml
+++ b/backend/api/swaggers/results_api.yml
@@ -3,26 +3,18 @@ its correctness. Patch data in database recording the learning process.
 This endpoint utilized ML approach for answer correctness comparing.
 ---
 description: Client side interaction with server
-consumes:
-- "application/json"
 produces:
 - "application/json"
 parameters:
   - in: header
-    name: headers_params
+    name: session_token
     required: true
-    schema:
-      id: question_api_header
-      required:
-        - session_token
-      properties:
-        session_token:
-          type: string
-          description: user's session token
+    description: user's session token
 responses:
   500:
       description: The error on the server side
       schema:
+        id: result_api_500
         properties:
           status:
             type: integer
@@ -36,6 +28,7 @@ responses:
   200:
       description: Access token for user intercation
       schema:
+        id: result_api_200
         properties:
           slangs_counts:
             type: object
