--- a/backend/api/swaggers/question_api.yml
+++ b/backend/api/swaggers/question_api.yml
@@ -12,7 +12,7 @@ parameters:
     name: session_token
     required: true
     description: user's session token
-  - in: body 
+  - in: body
     name: body_params
     required: true
     schema:
@@ -48,6 +48,9 @@ responses:
       schema:
         id: question_api_200
         properties:
+          status:
+            type: integer
+            description: Status code
           question_token:
             type: string
             description: The created user token
