--- a/backend/api/swaggers/results_api.yml
+++ b/backend/api/swaggers/results_api.yml
@@ -30,6 +30,9 @@ responses:
       schema:
         id: result_api_200
         properties:
+          status:
+            type: integer
+            description: Status code
           slangs_counts:
             type: object
             description: The asked target languages counts
