--- a/backend/api/swaggers/upload_phrases.yml
+++ b/backend/api/swaggers/upload_phrases.yml
@@ -39,3 +39,12 @@ responses:
             description: Full occured error summary
   200:
       description: Message about success
+      schema:
+        id: upload_phrases_api_200
+        properties:
+          status:
+            type: integer
+            description: Status code
+          message:
+            type: string
+            description: Message from backend
