--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,12 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
