--- a/backend/api/swaggers/results_api.yml
+++ b/backend/api/swaggers/results_api.yml
@@ -9,6 +9,7 @@ parameters:
   - in: header
     name: session_token
     required: true
+    type: string
     description: user's session token
 responses:
   500:
