--- a/backend/api/swaggers/question_api.yml
+++ b/backend/api/swaggers/question_api.yml
@@ -11,12 +11,12 @@ parameters:
   - in: header
     name: session_token
     required: true
+    type: string
     description: user's session token
   - in: body
     name: body_params
     required: true
     schema:
-      id: question_api_body
       properties:
         first_language:
           type: string
