--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ backports.entry-points-selectable==1.1.0
 click==8.0.1
 colorama==0.4.4
 distlib==0.3.3
-fasttext==0.9.2
+gensim==3.8.3
+compress-fasttext==0.0.7
 filelock==3.3.0
 Flask==2.0.1
 Flask-Cors==3.0.10
