89 add tips to nlp service (#92)
* add tips to nlp service

* fix uploading

--- a/nlp_module/api/swaggers/get_similarity_api.yml
+++ b/nlp_module/api/swaggers/get_similarity_api.yml
@@ -48,3 +48,6 @@ responses:
           equality_rate:
             type: string
             description: Equality rate
+          differences:
+            type: strin
+            description: Difference between user answer and real answer (tip)
