resolve networking and relative path problems (#99)

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,8 @@
 POSTGRES_NAME=langflow
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=123456
-POSTGRES_HOST=localhost
+POSTGRES_HOST=10.192.1.10
 POSTGRES_PORT=5432
 
-
-RL_SERVICE_URL=http://localhost:6768
-NLP_SERVICE_URL=http://localhost:6769
+RL_SERVICE_URL=http://10.192.1.22:6768
+NLP_SERVICE_URL=http://10.192.1.23:6769
