--- a/rl_module/requirements.txt
+++ b/rl_module/requirements.txt
@@ -23,6 +23,7 @@ py==1.10.0
 pybind11==2.7.1
 pyparsing==2.4.7
 python-dateutil==2.8.2
+python-dotenv==0.19.1
 pytz==2021.1
 scipy==1.7.1
 six==1.16.0
