--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,6 +28,7 @@ pytz==2021.1
 scipy==1.7.1
 six==1.16.0
 SQLAlchemy==1.4.24
+scikit-learn==1.0.1
 toml==0.10.2
 tox==3.24.4
 typing-extensions==3.10.0.2
