--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
     "eslint": "^7.11.0",
-    "node-sass": "^6.0.1",
+    "sass": "1.49.10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-cookie": "^4.1.1",
