--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/styled-engine-sc": "^5.0.0-beta.5",
     "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -20,8 +22,8 @@
     "@typescript-eslint/parser": "^4.33.0",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
+    "classnames": "^2.3.1",
     "eslint": "^7.11.0",
-    "sass": "1.49.10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-cookie": "^4.1.1",
@@ -33,6 +35,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
+    "sass": "1.49.10",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
