--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,15 @@
     "bootstrap": "^5.1.1",
     "classnames": "^2.3.1",
     "eslint": "^7.11.0",
+    "i18next": "^21.8.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-flags-select": "^2.2.3",
+    "react-i18next": "^11.18.1",
     "react-notifications": "^1.7.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
