--- a/rl_module/requirements.txt
+++ b/rl_module/requirements.txt
@@ -1,38 +1,27 @@
-attrs==21.2.0
-backports.entry-points-selectable==1.1.0
-click==8.0.1
-distlib==0.3.3
-compress-fasttext==0.0.7
-filelock==3.3.0
-Flask==2.0.1
-Flask-Cors==3.0.10
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.1
-gunicorn==20.1.0
-importlib-metadata==4.8.1
-iniconfig==1.1.1
-itsdangerous==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-numpy==1.21.2
-packaging==21.0
-pandas==1.3.3
-platformdirs==2.4.0
-pluggy==1.0.0
-py==1.10.0
-pybind11==2.7.1
-pyparsing==2.4.7
-python-dateutil==2.8.2
-python-dotenv==0.19.1
-pytz==2021.1
-scipy==1.7.1
-six==1.16.0
-SQLAlchemy==1.4.24
-toml==0.10.2
-tox==3.24.4
-typing-extensions==3.10.0.2
-virtualenv==20.8.1
-Werkzeug==2.0.1
-zipp==3.5.0
-psycopg2==2.7.7
+attrs==22.1.0
+click==8.1.3
+coloredlogs==15.0.1
 flasgger==0.9.5
+Flask==2.2.2
+flatbuffers==2.0.7
+humanfriendly==10.0
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsonschema==4.15.0
+MarkupSafe==2.1.1
+mistune==2.0.4
+mpmath==1.2.1
+numpy==1.23.2
+onnxruntime==1.12.1
+packaging==21.3
+protobuf==4.21.5
+pyparsing==3.0.9
+pyrsistent==0.18.1
+PyYAML==6.0
+six==1.16.0
+sympy==1.11.1
+torch==1.12.1
+typing_extensions==4.3.0
+Werkzeug==2.2.2
+zipp==3.8.1
